# GhulbusMath

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build-and-test-macos.yml  build-and-test-ubuntu.yml  build-and-test-windows.yml
cmake/: gbMathConfig.cmake.in
doc/: Doxyfile.in
include/gbMath/: AABB2.hpp  AABB3.hpp  Basis3.hpp  Circle2.hpp  Color4.hpp  Common.hpp  ComponentVector3.hpp  GhulbusMath.hpp  Line2.hpp  Line3.hpp  Matrix.hpp  Matrix2.hpp  Matrix3.hpp  Matrix4.hpp  MatrixIO.hpp  MatrixIO2.hpp  MatrixIO3.hpp  MatrixIO4.hpp  MatrixION.hpp  MatrixPolicies.hpp  NumberTypeTraits.hpp  OBB3.hpp  Rational.hpp  RationalIO.hpp  Sphere3.hpp  Tensor3.hpp  Transform2.hpp  Transform3.hpp  TransformLine3.hpp  Vector.hpp  Vector2.hpp  Vector2SIMD.hpp  Vector2Swizzle.hpp  Vector3.hpp  Vector3Swizzle.hpp  Vector4.hpp  VectorIO.hpp  VectorIO2.hpp  VectorIO3.hpp  VectorIO4.hpp  (+4 more)
test/: TestAABB2.cpp  TestAABB3.cpp  TestBasis3.cpp  TestCircle2.cpp  TestColor4.cpp  TestCommon.cpp  TestComponentVector3.cpp  TestGhulbusMath.cpp  TestLine2.cpp  TestLine3.cpp  TestMatrix.cpp  TestMatrix2.cpp  TestMatrix3.cpp  TestMatrix4.cpp  TestMatrixIO.cpp  TestOBB3.cpp  TestRational.cpp  TestRationalIO.cpp  TestSphere3.cpp  TestTensor3.cpp  TestTransform2.cpp  TestTransform3.cpp  TestTransformLine3.cpp  TestVector.cpp  TestVector2.cpp  TestVector2SIMD.cpp  TestVector3.cpp  TestVector4.cpp  TestVectorIO.cpp  TestVectorSwizzle.cpp
test/test_utils/: MultiplicationOrderAwareOperand.hpp
